--- a/ch.hesge.csim2.core/.classpath
+++ b/ch.hesge.csim2.core/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.35-bin.jar" sourcepath="lib/mysql-connector-java-5.1.35-src.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math-3-3.5-bin.jar" sourcepath="lib/commons-math-3-3.5-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
