--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -13,8 +13,8 @@ look-and-feel = com.alee.laf.WebLookAndFeel
 #
 # mysql configuration
 #
-database-user       = csim2
-database-password   = csim2
+database-user       = root
+database-password   = ababbr
 database-connection = jdbc:mysql://localhost:3306/csim2
 
 #
