added DefaultArea test case

--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -6,7 +6,7 @@
 # ui configuration
 #
 window-size   = 1024x768 
-look-and-feel = com.alee.laf.WebLookAndFeel
+#look-and-feel = com.alee.laf.WebLookAndFeel
 #look-and-feel = javax.swing.plaf.metal.MetalLookAndFeel
 #look-and-feel = javax.swing.plaf.nimbus.NimbusLookAndFeel
 
