--- a/ch.hesge.csim2.ui/.classpath
+++ b/ch.hesge.csim2.ui/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.cppanalyzer"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.cppinstrumenter"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.ontologyloader"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.scenarioplayer"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.simulinkinstrumenter"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.stemmethodanalyzer"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.traceloader"/>
@@ -23,8 +22,10 @@
 	<classpathentry kind="lib" path="lib/jcommon-1.0.23.jar" sourcepath="lib/jcommon-1.0.23-src.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.19.jar" sourcepath="lib/jfreechart-1.0.19-src.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.35.jar" sourcepath="lib/mysql-connector-java-5.1.35-src.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar" sourcepath="lib/slf4j-api-1.7.12-src.jar"/>
 	<classpathentry kind="lib" path="lib/weblaf-1.28.jar" sourcepath="lib/weblaf-1.28-src.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.4.7.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.3.jar" sourcepath="lib/log4j-api-2.3-src.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.3.jar" sourcepath="lib/log4j-core-2.3-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
