finalized swing console

--- a/ch.hesge.csim2.ui/.settings/org.eclipse.core.resources.prefs
+++ b/ch.hesge.csim2.ui/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/ch/hesge/csim2/ui/utils/PaintUtils.java=UTF-8
 encoding//src/ch/hesge/csim2/ui/utils/SwingUtils.java=UTF-8
