--- a/ch.hesge.csim2.engine.ontologyloader/build.xml
+++ b/ch.hesge.csim2.engine.ontologyloader/build.xml
@@ -27,7 +27,7 @@
 	<target name="copy-dependencies">
 		<echo message="Copying all required files to target folder"/>
     	<copy todir="${distrib-dir}/lib">
-    		<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*.source*.jar"/>
+    		<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
 		</copy>		    	
     </target>
 			
