--- a/ch.hesge.csim2.ui/conf/plugins.properties
+++ b/ch.hesge.csim2.ui/conf/plugins.properties
@@ -2,6 +2,7 @@
 #
 # CSIM2 plugin-manager configuration file
 #
+
 # Declare available engines
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.OntologyLoader
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.CppAnalyzer
@@ -13,3 +14,6 @@ ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.JavaInstrumenter
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.TraceLoader
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemConceptAnalyzer
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemMethodAnalyzer
+
+# Declare available matchers
+ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.TfidfMatcher
