--- a/ch.hesge.csim2.ui/.classpath
+++ b/ch.hesge.csim2.ui/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/log4j-api-2.3.jar" sourcepath="lib/log4j-api-2.3-src.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-core-2.3.jar" sourcepath="lib/log4j-core-2.3-src.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.engine.tfidfmatcher"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
