renamed engine package into matcher package

--- a/ch.hesge.csim2.engine.tfidfmatcher/.project
+++ b/ch.hesge.csim2.engine.tfidfmatcher/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ch.hesge.csim2.engine.tfidfmatcher</name>
+	<name>ch.hesge.csim2.matcher.tfidfmatcher</name>
 	<comment></comment>
 	<projects>
 	</projects>
