--- a/ch.hesge.csim2.ui/conf/plugins.properties
+++ b/ch.hesge.csim2.ui/conf/plugins.properties
@@ -16,5 +16,5 @@ ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemConceptAnalyzer
 ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemMethodAnalyzer
 
 # Declare available matchers
-ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.engine.TfidfMatcher
-ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.engine.IdMatcher
+ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.TfidfMatcher
+ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.IdentifierMatcher
