--- a/ch.hesge.csim2.core/build.xml
+++ b/ch.hesge.csim2.core/build.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="csim2 core implementation script builder" basedir="." default="create-distrib">
+<project name="library script builder" basedir="." default="create-distrib">
 	
     <!-- script properties -->
 
-    <property name="core-version" value="1.3.14"/>
-	<property name="distrib-dir" value="${basedir}/../runtime"/>
+	<property name="core-lib-name" value="csim2-core"/>
+    <property name="core-lib-version" value="1.3.15"/>
+	<property name="core-lib-author" value="Eric Harth"/>
+    <property name="core-lib-classpath" value=". mysql-connector-java-5.1.25.jar"/>
+	<available file="${basedir}/lib" type="dir" property="lib-folder-present"/>
+	
+	<!-- copy all dependencies -->
 
-	<!-- copy all required files for distribution -->
-
-	<target name="copy-dependencies">
-		<echo message="Copying all required files to target folder"/>
-    	<copy todir="${distrib-dir}/lib">
-    		<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
-		</copy>		  
-		<!--
-    	<copy todir="${distrib-dir}/data">
-    		<fileset dir="${basedir}/data"/>
-		</copy>
-		-->		    	
+	<target name="copy-dependencies" if="lib-folder-present">		
+		<echo message="copying dependencies"/>
+		<copy todir="${distrib-dir}/lib">
+			<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
+		</copy>		    	
     </target>
 			
-	<!-- create a jar with all classes and resources -->
+	<!-- create engine jar file -->
 
 	<target name="create-jar">
-		<echo message="Generating csim2-core.jar file"/>
-        <jar destfile="${distrib-dir}/bin/csim2-core-${core-version}.jar">
+		<echo message="generating jar file"/>
+        <jar destfile="${distrib-dir}/bin/${core-lib-name}-${core-lib-version}.jar">
             <manifest>
 		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
-		        <attribute name="Implementation-Title" value="Csim2 core libraries" />
-		        <attribute name="Implementation-Version" value="${core-version}" />
-        		<attribute name="Built-By" value="Eric Harth" />
-                <attribute name="Class-Path" value=". mysql-connector-java-5.1.25.jar"/>
+		        <attribute name="Implementation-Title" value="${core-lib-name}" />
+		        <attribute name="Implementation-Version" value="${core-lib-version}" />
+        		<attribute name="Built-By" value="${core-lib-author}" />
+                <attribute name="Class-Path" value="${core-lib-classpath}"/>
             </manifest>
             <fileset dir="${basedir}/bin" includes="**/*.class"/>
         </jar>
@@ -38,7 +36,6 @@
 	
 	<!-- default task -->
 	
-	<target name="create-distrib" depends="create-jar,copy-dependencies">
-    </target>
+	<target name="create-distrib" depends="create-jar,copy-dependencies" />
 
 </project>
