--- a/ch.hesge.csim2.engine.ontologyloader/build.xml
+++ b/ch.hesge.csim2.engine.ontologyloader/build.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="Csim2 ontology loader script builder" basedir="." default="create-distrib">
+<project name="engine script builder" basedir="." default="create-distrib">
 	
     <!-- script properties -->
 
+	<property name="engine-name" value="ontology-loader"/>
     <property name="engine-version" value="1.0.2"/>
-	<property name="distrib-dir" value="${basedir}/../runtime"/>
+	<property name="engine-author" value="Eric Harth"/>
+    <property name="engine-classpath" value="."/>
+	<available file="${basedir}/lib" type="dir" property="lib-folder-present"/>
 	
-	<!-- create a jar file -->
+	<!-- copy all dependencies -->
+
+	<target name="copy-dependencies" if="lib-folder-present">		
+		<echo message="copying dependencies"/>
+		<copy todir="${distrib-dir}/lib">
+			<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
+		</copy>		    	
+    </target>
+			
+	<!-- create engine jar file -->
 
 	<target name="create-jar">
-		<echo message="Generating csim2-ontology-loader.jar file"/>
-        <jar destfile="${distrib-dir}/bin/csim2-ontology-loader-${engine-version}.jar">
+		<echo message="generating engine jar file"/>
+        <jar destfile="${distrib-dir}/bin/${engine-name}-${engine-version}.jar">
             <manifest>
 		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
-		        <attribute name="Implementation-Title" value="Ontology loader" />
+		        <attribute name="Implementation-Title" value="${engine-name}" />
 		        <attribute name="Implementation-Version" value="${engine-version}" />
-        		<attribute name="Built-By" value="Eric Harth" />
-                <attribute name="Class-Path" value="."/>
+        		<attribute name="Built-By" value="${engine-author}" />
+                <attribute name="Class-Path" value="${engine-classpath}"/>
             </manifest>
             <fileset dir="${basedir}/bin" includes="**/*.class"/>
         </jar>
     </target>
 	
-	<!-- copy dependencies -->
-
-	<target name="copy-dependencies">
-		<echo message="Copying all required files to target folder"/>
-    	<copy todir="${distrib-dir}/lib">
-    		<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
-		</copy>		    	
-    </target>
-			
 	<!-- default task -->
 	
 	<target name="create-distrib" depends="create-jar,copy-dependencies" />
