--- a/ch.hesge.csim2.ui/build.xml
+++ b/ch.hesge.csim2.ui/build.xml
@@ -3,55 +3,64 @@
 	
     <!-- script properties -->
 
+	<property name="name" value="csim2-ui"/>
     <property name="version" value="1.3.15"/>
+	<property name="author" value="Eric Harth"/>
+    <property name="classpath" value=". mysql-connector-java-5.1.25.jar"/>
 	<property name="scripts-dir" value="scripts"/>
 	<property name="distrib-dir" value="../../csim2-v${version}"/>
+	<available file="${basedir}/lib" type="dir" property="is-lib-folder-present"/>
 
     <!-- delete old files -->
 
     <target name="clean">
-		<echo>Cleaning target files</echo>
+    	<echo message="cleaning target"/>
 	   	<delete dir="${distrib-dir}" />
-		<echo>Preparing target folders</echo>
+    	<echo message="preparing target"/>
 	   	<mkdir dir="${distrib-dir}/bin" />
 	   	<mkdir dir="${distrib-dir}/lib" />
 	   	<mkdir dir="${distrib-dir}/conf" />
-	   	<mkdir dir="${distrib-dir}/data" />
 	   	<mkdir dir="${distrib-dir}/log" />
     </target>
 
 	<!-- create startup csim2 script -->
 	
     <target name="create-script">
-		<echo message="Generating csim2.cmd script"/>
+		<echo message="generating csim2.cmd script"/>
 		<echo file="${distrib-dir}/csim2.cmd" append="false">
 @echo off
 start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
 		</echo>    	
     </target>
 
-	<!-- copy all required files for distribution -->
+	<!-- copy all dependencies -->
 
-	<target name="copy-dependencies">
-		<echo message="Copying all required files to target folder"/>
-    	<copy todir="${distrib-dir}/conf">
-			<fileset dir="conf" includes="**/*.*" />
-		</copy>		    	
-    	<copy todir="${distrib-dir}/lib">
-    		<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
+	<target name="copy-dependencies" if="is-lib-folder-present">		
+		<echo message="copying dependencies"/>
+		<copy todir="${distrib-dir}/lib">
+			<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
 		</copy>		    	
     </target>
 			
+	<!-- copy configuration files -->
+
+	<target name="copy-configuration">
+		<echo message="copying configuration files"/>
+    	<copy todir="${distrib-dir}/conf">
+			<fileset dir="conf" includes="**/*.*" />
+		</copy>		    	
+    </target>
+	
 	<!-- create executable jar with all classes and resources -->
 
 	<target name="create-jar">
-		<echo message="Generating csim2-swing.jar file"/>
-        <jar destfile="${distrib-dir}/bin/csim2-ui-${version}.jar">
+		<echo message="generating jar file"/>
+        <jar destfile="${distrib-dir}/bin/${name}-${version}.jar">
             <manifest>
 		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
-		        <attribute name="Implementation-Title" value="Csim2 swing application" />
+		        <attribute name="Implementation-Title" value="${name}" />
 		        <attribute name="Implementation-Version" value="${version}" />
-        		<attribute name="Built-By" value="Eric Harth" />
+        		<attribute name="Built-By" value="${author}" />
             	<attribute name="Main-class" value="ch.hesge.csim2.ui.swing.Csim2Startup" />
                 <attribute name="Class-Path" value="."/>
             </manifest>
@@ -60,16 +69,10 @@ start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
         </jar>
     </target>
 	
-	<!-- create csim2 core jar files -->
+    <!-- create csim2 jar dependencies -->
 
-	<target name="create-core-jars">
-		<ant antfile="../ch.hesge.csim2.core/build.xml" target="create-jar" dir="../ch.hesge.csim2.core" />
-		<ant antfile="../ch.hesge.csim2.core/build.xml" target="copy-dependencies" dir="../ch.hesge.csim2.core" />
-	</target>
-	
-    <!-- create csim2 engines -->
-
-	<target name="create-engines">
+	<target name="create-dependencies">
+		<ant antfile="../ch.hesge.csim2.core/build.xml"                        dir="../ch.hesge.csim2.core" />
 		<ant antfile="../ch.hesge.csim2.engine.ontologyloader/build.xml"       dir="../ch.hesge.csim2.engine.ontologyloader" />
 		<ant antfile="../ch.hesge.csim2.engine.cppanalyzer/build.xml"          dir="../ch.hesge.csim2.engine.cppanalyzer" />
 		<ant antfile="../ch.hesge.csim2.engine.cppinstrumenter/build.xml"      dir="../ch.hesge.csim2.engine.cppinstrumenter" />
@@ -80,12 +83,12 @@ start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
 		<ant antfile="../ch.hesge.csim2.engine.traceloader/build.xml"          dir="../ch.hesge.csim2.engine.traceloader" />
 		<ant antfile="../ch.hesge.csim2.engine.stemconceptanalyzer/build.xml"  dir="../ch.hesge.csim2.engine.stemconceptanalyzer" />
 		<ant antfile="../ch.hesge.csim2.engine.stemmethodanalyzer/build.xml"   dir="../ch.hesge.csim2.engine.stemmethodanalyzer" />
-		<ant antfile="../ch.hesge.csim2.engine.tfidfmatcher/build.xml"         dir="../ch.hesge.csim2.engine.tfidfmatcher" />
+		<ant antfile="../ch.hesge.csim2.matcher.tfidfmatcher/build.xml"        dir="../ch.hesge.csim2.matcher.tfidfmatcher" />
+		<ant antfile="../ch.hesge.csim2.matcher.identifiermatcher/build.xml"   dir="../ch.hesge.csim2.matcher.identifiermatcher" />
 	</target>
 	
 	<!-- default task -->
 	
-	<target name="create-distrib" depends="clean,create-script,create-jar,copy-dependencies,create-core-jars,create-engines">
-    </target>
+	<target name="create-distrib" depends="clean,create-script,create-jar,create-dependencies,copy-configuration,copy-dependencies" />
 
 </project>
