--- a/ch.hesge.csim2.core/build.xml
+++ b/ch.hesge.csim2.core/build.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="library script builder" basedir="." default="create-distrib">
+<project name="library script builder" default="default">
 	
     <!-- script properties -->
 
-	<property name="core-lib-name" value="csim2-core"/>
-    <property name="core-lib-version" value="1.3.18"/>
-	<property name="core-lib-author" value="Eric Harth"/>
-    <property name="core-lib-classpath" value=". mysql-connector-java-5.1.25.jar"/>
-	<available file="${basedir}/lib" type="dir" property="lib-folder-present"/>
+	<property name="library.name" value="csim2-core"/>
+    <property name="library.version" value="1.3.18"/>
+	<property name="library.author" value="Eric Harth"/>
+    <property name="library.classpath" value=". mysql-connector-java-5.1.25.jar"/>
 	
-	<!-- copy all dependencies -->
+	<available file="${base.dir}/lib" type="dir" property="is-lib-folder-present"/>
+	
+	<!-- copy dependencies -->
 
-	<target name="copy-dependencies" if="lib-folder-present">		
-		<echo message="copying dependencies"/>
-		<copy todir="${distrib-dir}/lib">
-			<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
+	<target name="copy-dependencies" if="is-lib-folder-present">		
+		<copy todir="${dist.dir}/lib">
+			<fileset dir="${base.dir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
 		</copy>		    	
     </target>
 			
-	<!-- create engine jar file -->
-
-	<target name="create-jar">
-		<echo message="generating jar file"/>
-        <jar destfile="${distrib-dir}/bin/${core-lib-name}-${core-lib-version}.jar">
+	<!-- distribution -->
+	
+	<target name="dist" depends="copy-dependencies">
+		<jar destfile="${dist.dir}/bin/${library.name}-${library.version}.v${DSTAMP}${TSTAMP}.jar">
             <manifest>
 		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
-		        <attribute name="Implementation-Title" value="${core-lib-name}" />
-		        <attribute name="Implementation-Version" value="${core-lib-version}" />
-        		<attribute name="Built-By" value="${core-lib-author}" />
-                <attribute name="Class-Path" value="${core-lib-classpath}"/>
+		        <attribute name="Implementation-Title" value="${library.name}" />
+		        <attribute name="Implementation-Version" value="${library.version}" />
+        		<attribute name="Built-By" value="${library.author}" />
+                <attribute name="Class-Path" value="${library.classpath}"/>
             </manifest>
-            <fileset dir="${basedir}/bin" includes="**/*.class"/>
+            <fileset dir="bin" includes="**/*.class"/>
         </jar>
     </target>
 	
 	<!-- default task -->
 	
-	<target name="create-distrib" depends="create-jar,copy-dependencies" />
+	<target name="default" depends="dist" />
 
 </project>
