--- a/ch.hesge.csim2.ui/build.xml
+++ b/ch.hesge.csim2.ui/build.xml
@@ -1,77 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="csim2 swing app script builder" basedir="." default="create-distrib">
+<project name="csim2 swing app script builder" default="default">
 	
     <!-- script properties -->
 
 	<property name="name" value="csim2-ui"/>
     <property name="version" value="1.3.18"/>
 	<property name="author" value="Eric Harth"/>
-    <property name="classpath" value=". mysql-connector-java-5.1.25.jar"/>
-	<property name="scripts-dir" value="scripts"/>
-	<property name="distrib-dir" value="../../csim2-v${version}"/>
-	<available file="${basedir}/lib" type="dir" property="is-lib-folder-present"/>
+	<property name="base.dir" value="."/>
+	<property name="dist.dir" location="dist"/>
+    <property name="mainclass" value="ch.hesge.csim2.ui.swing.Csim2Startup"/>
+    <property name="classpath" value="."/>
+	
+	<available file="${base.dir}/lib" type="dir" property="is-lib-folder-present"/>
 
-    <!-- delete old files -->
+	<!-- initialization -->
 
-    <target name="clean">
-    	<echo message="cleaning target"/>
-	   	<delete dir="${distrib-dir}" />
-    	<echo message="preparing target"/>
-	   	<mkdir dir="${distrib-dir}/bin" />
-	   	<mkdir dir="${distrib-dir}/lib" />
-	   	<mkdir dir="${distrib-dir}/conf" />
-	   	<mkdir dir="${distrib-dir}/log" />
-    </target>
+	<target name="init">
+		<tstamp />
+	   	<mkdir dir="${dist.dir}/bin" />
+	   	<mkdir dir="${dist.dir}/lib" />
+	   	<mkdir dir="${dist.dir}/conf" />
+	   	<mkdir dir="${dist.dir}/log" />
+	</target>	
 
-	<!-- create startup csim2 script -->
+	<!-- cleaning -->
+	
+	<target name="clean">
+	   	<delete dir="${dist.dir}" />
+	</target>
+
+	<!-- create script -->
 	
     <target name="create-script">
-		<echo message="generating csim2.cmd script"/>
-		<echo file="${distrib-dir}/csim2.cmd" append="false">
-@echo off
-start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
+		<echo file="${dist.dir}/csim2.cmd" append="false">
+		@echo off
+		start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
 		</echo>    	
     </target>
 
-	<!-- copy all dependencies -->
+	<!-- copy dependencies -->
 
 	<target name="copy-dependencies" if="is-lib-folder-present">		
-		<echo message="copying dependencies"/>
-		<copy todir="${distrib-dir}/lib">
+		<copy todir="${dist.dir}/lib">
 			<fileset dir="${basedir}/lib" includes="**/*.jar" excludes="**/*src*.jar"/>
 		</copy>		    	
-    </target>
-			
-	<!-- copy configuration files -->
-
-	<target name="copy-configuration">
-		<echo message="copying configuration files"/>
-    	<copy todir="${distrib-dir}/conf">
+    	<copy todir="${dist.dir}/conf">
 			<fileset dir="conf" includes="**/*.*" />
 		</copy>		    	
     </target>
 	
-	<!-- create executable jar with all classes and resources -->
+	<!-- build and copy engines/matchers -->
 
-	<target name="create-jar">
-		<echo message="generating jar file"/>
-        <jar destfile="${distrib-dir}/bin/${name}-${version}.jar">
-            <manifest>
-		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
-		        <attribute name="Implementation-Title" value="${name}" />
-		        <attribute name="Implementation-Version" value="${version}" />
-        		<attribute name="Built-By" value="${author}" />
-            	<attribute name="Main-class" value="ch.hesge.csim2.ui.swing.Csim2Startup" />
-                <attribute name="Class-Path" value="."/>
-            </manifest>
-            <fileset dir="bin" includes="**/*.class"/>
-            <fileset dir="bin" includes="**/*png"/>
-        </jar>
-    </target>
-	
-    <!-- create csim2 jar dependencies -->
-
-	<target name="create-dependencies">
+	<target name="copy-engines">
 		<ant antfile="../ch.hesge.csim2.core/build.xml"                        dir="../ch.hesge.csim2.core" />
 		<ant antfile="../ch.hesge.csim2.engine.ontologyloader/build.xml"       dir="../ch.hesge.csim2.engine.ontologyloader" />
 		<ant antfile="../ch.hesge.csim2.engine.cppanalyzer/build.xml"          dir="../ch.hesge.csim2.engine.cppanalyzer" />
@@ -86,9 +66,26 @@ start javaw -classpath bin/*;lib/* ch.hesge.csim2.ui.AppStartup %1 %2
 		<ant antfile="../ch.hesge.csim2.matcher.tfidfmatcher/build.xml"        dir="../ch.hesge.csim2.matcher.tfidfmatcher" />
 		<ant antfile="../ch.hesge.csim2.matcher.identifiermatcher/build.xml"   dir="../ch.hesge.csim2.matcher.identifiermatcher" />
 	</target>
+
+	<!-- distribution -->
+	
+	<target name="dist" depends="create-script,copy-dependencies,copy-engines">
+        <jar destfile="${dist.dir}/bin/${name}-${version}.v${DSTAMP}${TSTAMP}.jar">
+            <manifest>
+		        <attribute name="Implementation-Vendor" value="HEG, Geneva, Switzerland" />
+		        <attribute name="Implementation-Title" value="${name}" />
+		        <attribute name="Implementation-Version" value="${version}" />
+        		<attribute name="Built-By" value="${author}" />
+            	<attribute name="Main-class" value="${mainclass}" />
+                <attribute name="Class-Path" value="${classpath}"/>
+            </manifest>
+            <fileset dir="bin" includes="**/*.class"/>
+            <fileset dir="bin" includes="**/*png"/>
+        </jar>
+    </target>
 	
 	<!-- default task -->
 	
-	<target name="create-distrib" depends="clean,create-script,create-jar,create-dependencies,copy-configuration,copy-dependencies" />
+	<target name="default" depends="clean,init,dist" />
 
 </project>
