--- a/ch.hesge.csim2.ui/conf/plugins.properties
+++ b/ch.hesge.csim2.ui/conf/plugins.properties
@@ -18,3 +18,4 @@ ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemMethodAnalyzer
 # Declare available matchers
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.TfidfMatcher
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.IdentifierMatcher
+ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.StructureMatcher
