--- a/ch.hesge.csim2.matcher.sourcematcher/build.xml
+++ b/ch.hesge.csim2.matcher.sourcematcher/build.xml
@@ -3,7 +3,7 @@
 	
     <!-- script properties -->
 
-	<property name="engine-name" value="identifier-matcher"/>
+	<property name="engine-name" value="source-matcher"/>
     <property name="engine-version" value="1.0.2"/>
 	<property name="engine-author" value="Eric Harth"/>
     <property name="engine-classpath" value="."/>
