--- a/ch.hesge.csim2.matcher.wtfidfmatcher/.project
+++ b/ch.hesge.csim2.matcher.wtfidfmatcher/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ch.hesge.csim2.matcher.structurematcher</name>
+	<name>ch.hesge.csim2.matcher.wtfidfmatcher</name>
 	<comment></comment>
 	<projects>
 	</projects>
