--- a/ch.hesge.csim2.ui/conf/plugins.properties
+++ b/ch.hesge.csim2.ui/conf/plugins.properties
@@ -19,3 +19,4 @@ ch.hesge.csim2.core.model.IEngine = ch.hesge.csim2.engine.StemMethodAnalyzer
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.TfidfMatcher
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.WeightedTfidfMatcher
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.SourceMatcher
+ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.JaccardMatcher
