--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -6,9 +6,31 @@
 # ui configuration
 #
 window-size    = 1024x768 
-look-and-feel  = com.alee.laf.WebLookAndFeel
+
+#
+# application look and feel
+look-and-feel = com.alee.laf.WebLookAndFeel
+
+#look-and-feel = com.jgoodies.looks.windows.WindowsLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.PlasticLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.Plastic3DLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.PlasticXPLookAndFeel
+#look-and-feel = com.alee.laf.WebLookAndFeel
+#look-and-feel = com.jtattoo.plaf.fast.FastLookAndFeel
+#look-and-feel = com.jtattoo.plaf.mint.MintLookAndFeel
+#look-and-feel = com.jtattoo.plaf.smart.SmartLookAndFeel
 #look-and-feel = javax.swing.plaf.metal.MetalLookAndFeel
 #look-and-feel = javax.swing.plaf.nimbus.NimbusLookAndFeel
+#look-and-feel = com.jtattoo.plaf.acryl.AcrylLookAndFeel
+#look-and-feel = com.jtattoo.plaf.aero.AeroLookAndFeel
+#look-and-feel = com.jtattoo.plaf.aluminium.AluminiumLookAndFeel
+#look-and-feel = com.jtattoo.plaf.bernstein.BernsteinLookAndFeel
+#look-and-feel = com.jtattoo.plaf.graphite.GraphiteLookAndFeel
+#look-and-feel = com.jtattoo.plaf.hifi.HiFiLookAndFeel
+#look-and-feel = com.jtattoo.plaf.luna.LunaLookAndFeel
+#look-and-feel = com.jtattoo.plaf.mcwin.McWinLookAndFeel
+#look-and-feel = com.jtattoo.plaf.noire.NoireLookAndFeel
+#look-and-feel = com.jtattoo.plaf.texture.TextureLookAndFeel
 
 #
 # mysql configuration
