look & feel modifications

--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -5,16 +5,12 @@
 
 # ui configuration
 #
-window-size    = 1024x768 
+window-size = 1024x768 
 
 #
 # application look and feel
-look-and-feel = com.alee.laf.WebLookAndFeel
+#look-and-feel = com.alee.laf.WebLookAndFeel
 
-#look-and-feel = com.jgoodies.looks.windows.WindowsLookAndFeel
-#look-and-feel = com.jgoodies.looks.plastic.PlasticLookAndFeel
-#look-and-feel = com.jgoodies.looks.plastic.Plastic3DLookAndFeel
-#look-and-feel = com.jgoodies.looks.plastic.PlasticXPLookAndFeel
 #look-and-feel = com.alee.laf.WebLookAndFeel
 #look-and-feel = com.jtattoo.plaf.fast.FastLookAndFeel
 #look-and-feel = com.jtattoo.plaf.mint.MintLookAndFeel
@@ -31,6 +27,10 @@ look-and-feel = com.alee.laf.WebLookAndFeel
 #look-and-feel = com.jtattoo.plaf.mcwin.McWinLookAndFeel
 #look-and-feel = com.jtattoo.plaf.noire.NoireLookAndFeel
 #look-and-feel = com.jtattoo.plaf.texture.TextureLookAndFeel
+#look-and-feel = com.jgoodies.looks.windows.WindowsLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.PlasticLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.Plastic3DLookAndFeel
+#look-and-feel = com.jgoodies.looks.plastic.PlasticXPLookAndFeel
 
 #
 # mysql configuration
