restore default WebLAF

--- a/ch.hesge.csim2.ui/conf/csim2.conf
+++ b/ch.hesge.csim2.ui/conf/csim2.conf
@@ -9,7 +9,7 @@ window-size = 1024x768
 
 #
 # application look and feel
-#look-and-feel = com.alee.laf.WebLookAndFeel
+look-and-feel = com.alee.laf.WebLookAndFeel
 
 #look-and-feel = com.alee.laf.WebLookAndFeel
 #look-and-feel = com.jtattoo.plaf.fast.FastLookAndFeel
