--- a/ch.hesge.csim2.ui/conf/plugins.properties
+++ b/ch.hesge.csim2.ui/conf/plugins.properties
@@ -20,3 +20,4 @@ ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.TfidfMa
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.WeightedTfidfMatcher
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.SourceMatcher
 ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.JaccardMatcher
+ch.hesge.csim2.core.model.IMethodConceptMatcher = ch.hesge.csim2.matcher.LevenshteinMatcher
