--- a/ch.hesge.csim2.ui/.classpath
+++ b/ch.hesge.csim2.ui/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="lib/JTattoo-1.6.11.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-looks-2.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-common-1.8.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ch.hesge.csim2.matcher.levenshteinmatcher"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
