added cost calculation (fdc files merging)

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -8,7 +8,7 @@ accountPath        = res/plan.comptable.odoo.csv
 projectPath        = res/projets.csv
 activityPath       = res/fdc.csv
 activityDetailPath = res/fdc.detail.csv
-pricePath          = res/prix.horaires.csv
+pricePath          = res/tarif.hes.csv
 contributorPath    = res/collaborateurs.csv
 fundingPath        = res/financements.csv
 subcontractorPath  = res/soustraitance.csv
