accounting generated for fdc

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -18,7 +18,8 @@ financialPath      = res/agf.csv
 accountingPath = adoo.accounting.csv
 
 # Declare predefined values
-firstSemesterJournalId  = __export__.account_journal_5
-firstSemesterPeriodId   = __export__.account_period_10 
-secondSemesterJournalId = __export__.account_journal_5
-secondSemesterPeriodId  = __export__.account_period_10
+salaryAccount  = 5000
+journalId_S1   = __export__.account_journal_5
+journalId_S2   = __export__.account_journal_5
+periodId_S1    = __export__.account_period_10 
+PeriodId_S2    = __export__.account_period_10
